--- a/backend-create/backend-create_products/.env.local.example
+++ b/backend-create/backend-create_products/.env.local.example
@@ -1,1 +1,3 @@
-MONGODB_URI=mongodb+srv://<user>:<password>@<cluster-name>/<database-name>?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://user_one:mYlotQil05MtA5sh@cluster0.5ejeh.mongodb.net/fish-shop-database?retryWrites=true&w=majority&appName=Cluster0
+
+
